--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,52 @@
+version: '3'
+services:
+  gitlab:
+    image: gitlab/gitlab-ce:latest
+    container_name: gitlab
+    restart: always
+    hostname: 'gitlab.example.com'
+    environment:
+      GITLAB_OMNIBUS_CONFIG: |
+        external_url 'http://localhost'
+        letsencrypt['enable'] = false
+    ports:
+      - 80:80
+      - 443:443
+      - 22:22
+    networks:
+      - gitlab-network
+    volumes:
+      - '$GITLAB_HOME/config:/etc/gitlab'
+      - '$GITLAB_HOME/logs:/var/log/gitlab'
+      - '$GITLAB_HOME/data:/var/opt/gitlab'
+
+  artifactory:
+    image: docker.bintray.io/jfrog/artifactory-oss:6.23.0
+    container_name: artifactory
+    ports:
+     - 81:8081
+    volumes:
+     - $ARTIFACTORY_HOME/data/artifactory:/var/opt/jfrog/artifactory
+    #    Add extra Java options by uncommenting the following lines
+    #    environment:
+    #     - EXTRA_JAVA_OPTIONS=-Xms512m -Xmx4g
+    restart: always
+    ulimits:
+      nproc: 65535
+      nofile:
+        soft: 32000
+        hard: 40000
+    networks:
+     - gitlab-network
+    
+
+networks:
+  gitlab-network:
+    driver: bridge
+
+
+
+
 # web:
 #   image: 'gitlab/gitlab-ce:latest'
 #   restart: always
@@ -15,28 +64,28 @@
 #     - '$GITLAB_HOME/logs:/var/log/gitlab'
 #     - '$GITLAB_HOME/data:/var/opt/gitlab'
 
-version: '3'
-services:
-  gitlab:
-    image: gitlab/gitlab-ce:latest
-    container_name: "gitlab"
-    restart: always
-    hostname: 'localhost'
-    environment:
-      GITLAB_OMNIBUS_CONFIG: |
-        external_url 'http://localhost'
-        unicorn['worker_timeout'] = 120
-        unicorn['worker_processes'] = 2
-    ports:
-      - 80:80
-      - 443:443
-      - 22:22
-    networks:
-      - front-tier
-    volumes:
-      - ./gitlab/config:/etc/gitlab
-      - ./gitlab/logs:/var/log/gitlab
-      - ./gitlab/data:/var/opt/gitlab
+# version: '3'
+# services:
+#   gitlab:
+#     image: gitlab/gitlab-ce:latest
+#     container_name: "gitlab"
+#     restart: always
+#     hostname: 'localhost'
+#     environment:
+#       GITLAB_OMNIBUS_CONFIG: |
+#         external_url 'http://localhost'
+#         unicorn['worker_timeout'] = 120
+#         unicorn['worker_processes'] = 2
+#     ports:
+#       - 80:80
+#       - 443:443
+#       - 22:22
+#     networks:
+#       - front-tier
+#     volumes:
+#       - ./gitlab/config:/etc/gitlab
+#       - ./gitlab/logs:/var/log/gitlab
+#       - ./gitlab/data:/var/opt/gitlab
   
   # gitlab-runner:
   #   image: gitlab/gitlab-runner:alpine
@@ -64,6 +113,6 @@ services:
   #     - ./artifactory:/var/opt/jfrog/artifactory
     
 
-networks:
-  front-tier:
-    driver: bridge
+# networks:
+#   front-tier:
+#     driver: bridge
